Details
-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 8.0.0
-
None
-
QDS Berlin - 2022 Week 21/22
Description
The QmlProjectManager plugin instantiates the QDS landing page right on the start of Qt Creator.
For different reasons, we want such optional items, especially if they are as heavy as a qml scene, being instantiated lazily. For example on the first "show". Or in this case perhaps when the Design mode becomes active and can be pressed.
Attachments
Issue Links
- relates to
-
QDS-6564 Implement first iteration of QDS landing page
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-27583 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
413973,8 | QmlProjectManager: Load QDS landing page content when it is needed | 8.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |